# avendesora

./: .bump.cfg  .bumpversion.cfg  .gitignore  .readthedocs.yml  .swp  .travis.yml  LICENSE.txt  MANIFEST.in  README.rst  clean  install  pyproject.toml  readthedocs.yml  setup.py  tox.ini
.github/workflows/: build.yaml
avendesora/: __init__.py  account.py  accounts.py  browsers.py  charsets.py  cli.py  collection.py  command.py  conceal.py  concealers.py  config.py  cursor.py  dialog.py  dictionary.py  editors.py  error.py  extended_pathlib.py  file.py  files.py  generator.py  gpg.py  help.py  main.py  obscure.py  otp.py  preferences.py  recognize.py  recognizers.py  script.py  secrets.py  shlib.py  title.py  utilities.py  words  writer.py
doc/: accessories.rst  accounts.rst  adding-accounts.rst  advanced.rst  api.rst  commands.rst  concepts.rst  conf.py  configuring.rst  examples.rst  helpers.rst  index.rst  installing.rst  kpns.rst  overview.rst  releases.rst  requirements.txt  secrets.rst  upgrading.rst
docs/: conf.py  index.rst
etc/: .accounts_files  .hashes  README  accounts  config  templates
home/.gnupg/: pubring.kbx
samples/accounts/: .swp  cardholder_information.rst  challenge_questions.rst  gmail.rst  wireless_router.rst
samples/api/: addsshkeys  bw-csv-export  bw-export  bw-json-export  networth  postmortem  qute-avendesora
tests/: .coveragerc  10_test_avendesora.py  README  avendesora  pytest.ini  test_api.py  test_avendesora.py  test_help.py  test_package.py
tests/home/: .local  pubring.kbx  trustdb.gpg
tests/home/config/avendesora/: .accounts_files  .config.swp  .hashes  accounts  accounts.gpg  accounts_files  config  hashes  key  key.gpg  log.gpg  stealth_accounts  templates
tests/home/gnupg/: pubring.kbx  random_seed  trustdb.gpg
tests/home/gnupg/private-keys-v1.d/: 2840F86F07D2EEF141115D06F6B9CD52B4D37F06.key  32489E4B20C131A366C6711687E2712C8C64A62E.key
