[project]
name = "avendesora"
version = "1.26"
description = "A password generator and account manager."
readme = "README.rst"
keywords = ["avendesora", "password", "password vault", "XKCD"]
authors = [
    {name = "Ken Kundert"},
    {email = "avendesora@nurdletech.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
requires-python = ">=3.6"
dependencies = [
    "appdirs",
    "arrow!=0.14.*",
    "cryptography",
        # cryptography is optional, it provides rapid startup via encrypted manifests
    "docopt",
    "inform",
    "pygobject",
        # pygobject is optional, it provides a secret selection dialog
    "python-gnupg>=0.4.4",
        # Be careful.  There's a package called 'gnupg' that's an
        # incompatible fork of 'python-gnupg'.  If both are installed, the
        # user will probably have compatibility issues.
    "pyotp",
        # pyotp is optional, it provides one-time-password (OTP) secrets.
    #scrypt",
        # scrypt is optional. If you install it then Avendesora will offer
        # it. It is not required because it is little used and installing it
        # involves compiling C code and so significant additional
        # dependencies such as gcc.
]

[project.scripts]
avendesora = "avendesora.main:main"

[project.urls]
homepage = "https://avendesora.readthedocs.io"
documentation = "https://avendesora.readthedocs.io"
repository = "https://github.com/kenkundert/avendesora"
changelog = "https://avendesora.readthedocs.io/en/latest/releases.html"

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
exclude = [".tox", "doc"]

[tool.ruff.lint]
select = ["F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

